--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
-
 {
   "name": "corkboard",
   "version": "1.0.0",
   "description": "Cork Board",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon --exec babel-node server.js --ignore public/",
+    "start": "babel-node server.js",
     "dev": "webpack-dev-server --inline --hot",
     "build": "webpack -wd",
     "prod": "NODE_ENV=production webpack -wp"
@@ -20,13 +19,13 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.17.2",
-    "connect-mongo": "^1.3.2",
+    "connect-mongo": "^3.2.0",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "express-session": "^1.15.5",
     "moment": "^2.18.1",
-    "mongodb": "^2.2.31",
+    "mongodb": "^3.6.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.2.2"
